src/component/text_area/snapshots/envision__component__text_area__tests__view_cursor_above_scroll.snap
---
source: src/component/text_area/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│3                                     │
│4                                     │
│5                                     │
└──────────────────────────────────────┘
