src/component/text_area/snapshots/envision__component__text_area__tests__view_renders.snap
---
source: src/component/text_area/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│Line 1                                │
│Line 2                                │
│Line 3                                │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
