src/component/text_area/snapshots/envision__component__text_area__tests__view_with_scroll.snap
---
source: src/component/text_area/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│Line 8                                │
│Line 9                                │
│Line 10                               │
└──────────────────────────────────────┘
